95% coverage, baby!